--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/lab2.loader.js";
+      var loaderUrl = buildUrl + "/laab2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/lab2.data.gz",
-        frameworkUrl: buildUrl + "/lab2.framework.js.gz",
-        codeUrl: buildUrl + "/lab2.wasm.gz",
+        dataUrl: buildUrl + "/laab2.data",
+        frameworkUrl: buildUrl + "/laab2.framework.js",
+        codeUrl: buildUrl + "/laab2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project (4)",
