--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/laab2.loader.js";
+      var loaderUrl = buildUrl + "/laaab2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/laab2.data",
-        frameworkUrl: buildUrl + "/laab2.framework.js",
-        codeUrl: buildUrl + "/laab2.wasm",
+        dataUrl: buildUrl + "/laaab2.data",
+        frameworkUrl: buildUrl + "/laaab2.framework.js",
+        codeUrl: buildUrl + "/laaab2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project (4)",
